@@ -8,6 +8,7 @@ New features, changes and fixes since gnuplot version 4.4.0
 * FIX font glitch in win terminal 
 * FIX Protect against runaway recursion by limiting depth of nested functions
 * FIX metapost terminal: Fix inheritance of line thickness by text strings
+* FIX cairo terminals could segfault on certain enhanced text strings
 
 Features, changes and fixes in gnuplot version 4.4
 ==================================================
