@@ -1,3 +1,9 @@
+2010-04-04  Ethan A Merritt  <merritt@u.washington.edu>
+
+	* term/cairo.trm src/wxterminal/gp_cairo.c: Use-after-free error caused
+	a segfault on certain enhanced text strings.
+	Bug #2947223
+
 2010-04-01  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/graphics.c (boundary):  Tweak auto-placement of plot borders so
